# VoiceSpectrumAnalysis

./: .gitignore  CMakeLists.txt  README.md
conf/: layer.conf
recipes-apps/jannik-spectral/: jannik-spectral_1.0.bb
recipes-apps/jannik-spectral/files/: jannik-spectral.service
recipes-apps/orchid-lvgl/: orchid-lvgl_1.0.bb
recipes-images/images/: jannik-image.bb
recipes-kernel/linux/: linux-phytec-imx_6.6.23-2.0.0-phy.bbappend
recipes-kernel/linux/linux-phytec-6.6/: audio.scc
recipes-kernel/linux/linux-phytec-6.6/overlays/: imx8mp-phyboard-pollux-inmp441.dtso
src/: alsa-record-example  alsa-record-example.c  alsa_fft_demo  alsa_fft_demo.c  alsa_fft_sample  alsa_fft_sample.c  alsa_record_loop  alsa_record_loop.c  alsa_record_loop_break  audio.raw  audio_meter.c  headset_audio.raw  lv_meter_app.c  simple_fftw  simple_fftw.c  test.c  test2.c
